--- a/pertemuan1/latihan/index.html
+++ b/pertemuan1/latihan/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Latihan React</title>
 </head>
 <body>
     <div id="app"></div>
-    <script>
-        const app = document.getElementById('app');
-        const header = document.createElement('h1');
-        const headerContent = document.createTextNode('Halo!');
 
-        header.appendChild(headerContent);
-        app.appendChild(header);
+    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- Rule 1 : JSX harus punya closing tag -->
+    <script type="text/jsx">
+        const app = document.getElementById("app");
+        ReactDOM.render(<h1>Develop. Preview. Ship. 🚀</h1>, app);
     </script>
 </body>
 </html>
